Added geocode webservice

--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -20,17 +20,6 @@
         android:textStyle="bold|italic"/>
 
 
-    <TextView
-        android:id="@+id/driverTxt"
-        android:layout_width="wrap_content"
-        android:layout_below="@+id/txtOrderComp"
-        android:layout_marginTop="@dimen/dp_5"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/sp_15"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold|italic"
-        android:layout_height="wrap_content"
-        android:text="Driver :Kanue reaves"/>
 
 
     <TextView
@@ -38,146 +27,210 @@
         android:layout_width="wrap_content"
         android:textColor="@android:color/white"
         android:layout_marginTop="@dimen/dp_5"
-        android:layout_below="@+id/driverTxt"
+        android:layout_below="@+id/txtOrderComp"
         android:textSize="@dimen/sp_15"
         android:layout_centerHorizontal="true"
         android:textStyle="bold|italic"
         android:layout_height="wrap_content"
         android:text="Your driver will reach you shortly."/>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_margin="@dimen/dp_10"
-        android:layout_centerVertical="true"
-        android:weightSum="1"
-        android:orientation="horizontal"
         android:background="@drawable/bg_receipt"
-        >
-        <LinearLayout
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight=".4"
-            android:layout_marginTop="@dimen/dp_20"
-            android:layout_marginBottom="@dimen/dp_20"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
-            android:orientation="vertical">
+        android:layout_below="@+id/txtShortly"
+        android:layout_margin="@dimen/dp_10"
+        android:orientation="vertical">
+       <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="@dimen/dp_3"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_5">
 
-            <TextView
-                android:id="@+id/reTxtDate"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="17 Jan 2017"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Pick Address"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Amount"/>
+    <TextView
+        android:id="@+id/reTxtDate"
+        android:layout_width="0dp"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/sp_16"
+        android:textStyle="bold|italic"
+        android:layout_height="wrap_content"
+        android:layout_weight=".4"
+        android:text="17 Jan 2017"/>
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Transaction ID"/>
-
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Authorized"/>
-            </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="0sp"
-            android:layout_marginTop="@dimen/dp_20"
-            android:layout_height="match_parent"
+        <TextView
+            android:id="@+id/reTxtTime"
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:textStyle="bold|italic"
+            android:layout_marginLeft="@dimen/dp_4"
             android:layout_weight=".6"
-            android:layout_marginBottom="@dimen/dp_20"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:text="10:33"/>
 
-            <TextView
-                android:id="@+id/reTxtTime"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="10:33"/>
-
-            <TextView
-                android:id="@+id/reTxtPickAddress"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Pick Address"/>
-
-            <TextView
-                android:id="@+id/reTxtAmount"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Amount"/>
+    </LinearLayout>
 
 
-            <TextView
-                android:id="@+id/reTxtTransactionId"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Transaction ID"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="@dimen/dp_3"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_5">
+
+        <TextView
+            android:layout_width="0sp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_height="wrap_content"
+            android:layout_weight=".4"
+            android:text="Pick Address"/>
 
 
 
-            <TextView
-                android:id="@+id/reTxtAuthorised"
-                android:layout_width="wrap_content"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp_16"
-                android:layout_marginTop="@dimen/dp_20"
-                android:textStyle="bold|italic"
-                android:layout_height="wrap_content"
-                android:text="Authorized"/>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/reTxtPickAddress"
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_weight=".6"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_height="wrap_content"
+            android:text="Pick Address"/>
 
 
-        </LinearLayout>
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtShortly"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="@dimen/dp_3"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_5">
+
+        <TextView
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_weight=".4"
+            android:layout_height="wrap_content"
+            android:text="Amount"/>
+
+
+        <TextView
+            android:id="@+id/reTxtAmount"
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_weight=".6"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_height="wrap_content"
+            android:text="Amount"/>
+
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtShortly"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="@dimen/dp_3"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_5">
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_weight=".4"
+            android:layout_height="wrap_content"
+            android:text="Transaction ID"/>
+
+
+
+        <TextView
+            android:id="@+id/reTxtTransactionId"
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_weight=".6"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_height="wrap_content"
+            android:text="Transaction ID"/>
+
+
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtShortly"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="@dimen/dp_3"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_5">
+
+        <TextView
+            android:layout_width="0sp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_weight=".4"
+            android:layout_height="wrap_content"
+            android:text="Authorized"/>
+
+
+        <TextView
+            android:id="@+id/reTxtAuthorised"
+            android:layout_width="0dp"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            android:layout_marginTop="@dimen/dp_20"
+            android:textStyle="bold|italic"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_weight=".6"
+            android:layout_height="wrap_content"
+            android:text="Authorized"/>
+
+
+    </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
