--- a/app/src/main/res/layout/row_card.xml
+++ b/app/src/main/res/layout/row_card.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtCardNumber"
             android:layout_toRightOf="@+id/txtCardType"
+            android:layout_toLeftOf="@+id/imgDelteCard"
             android:textColor="@android:color/white"
             android:textStyle="bold|italic"
             android:layout_centerVertical="true"
@@ -55,6 +56,16 @@
             android:text="PERSONAL *********4567"
            />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_10"
+            android:padding="@dimen/dp_3"
+            android:src="@drawable/ic_delete"
+            android:id="@+id/imgDelteCard"
+            />
 
     </RelativeLayout>
 
