delete button in Card list,and delete card functionality

--- a/app/src/main/res/layout/fragment_select_vechile.xml
+++ b/app/src/main/res/layout/fragment_select_vechile.xml
@@ -33,13 +33,20 @@
                 android:id="@+id/addressRecycler"/>
             </LinearLayout>
 
-        <ImageView
+       <!-- <ImageView
             android:id="@+id/imgAddMoreAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/add_more_address"
             android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/dp_3"/>
+            android:layout_margin="@dimen/dp_3"/>-->
+        <include
+            android:id="@+id/viewAddMoreAddress"
+            android:layout_width="wrap_content"
+            android:layout_margin="@dimen/dp_3"
+            android:layout_gravity="bottom|end"
+            android:layout_height="wrap_content"
+            layout="@layout/add_destination"/>
 
         </FrameLayout>
 
