--- a/app/src/main/res/layout/layout_accept_reject.xml
+++ b/app/src/main/res/layout/layout_accept_reject.xml
@@ -7,6 +7,7 @@
 
     android:background="@drawable/bg_accept_reject">
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgAcceptreject"
      android:layout_width="@dimen/dp_40"
      android:layout_height="@dimen/dp_40"
      android:src="@drawable/default_profile_photo"
