--- a/app/src/main/res/layout/row_card.xml
+++ b/app/src/main/res/layout/row_card.xml
@@ -10,20 +10,29 @@
         android:background="@android:color/white"/>
 
 
-    <RelativeLayout
-        android:id="@+id/viewCardDetails"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:paddingTop="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_1"
-        android:paddingBottom="@dimen/dp_10"
-        >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+
+        <View
+            android:id="@+id/viewDefaultCArd"
+            android:layout_width="@dimen/dp_25"
+            android:layout_height="@dimen/dp_60"
+            android:background="@android:color/holo_green_dark"/>
+        <RelativeLayout
+            android:layout_toRightOf="@+id/viewDefaultCArd"
+            android:id="@+id/viewCardDetails"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_1"
+            android:paddingBottom="@dimen/dp_10">
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_4"
             android:padding="@dimen/dp_3"
             android:id="@+id/imgCardType"
             />
@@ -68,7 +77,7 @@
             />
 
     </RelativeLayout>
-
+</RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:id="@+id/viewCardBottomLine"
