--- a/app/src/main/res/layout/fragment_select_vechile.xml
+++ b/app/src/main/res/layout/fragment_select_vechile.xml
@@ -85,7 +85,7 @@
             android:layout_marginTop="@dimen/dp_10"
             android:layout_marginBottom="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_40"
-            android:text="ESTIMATE PRICE"
+            android:text="@string/str_estimate_cost"
             android:visibility="gone"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold|italic"
