--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,7 +22,10 @@
         android:gravity="center"
         android:layout_margin="@dimen/dp_30"
         android:padding="@dimen/dp_10"
-        android:background="@android:color/darker_gray"
+        android:textStyle="bold|italic"
+        android:textSize="@dimen/sp_16"
+        android:textColor="@android:color/white"
+        android:background="#73000000"
         android:layout_below="@+id/imgLogo"/>
 
     <EditText
