--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -124,7 +124,14 @@
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/ic_phone"/>
 
-                    <EditText
+
+                     <include
+                         android:id="@+id/viewCountryCode"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_gravity="center_vertical"
+                         layout="@layout/layout_country_codes"/>
+                   <!-- <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/frEdtCC"
@@ -143,7 +150,7 @@
                         android:paddingTop="@dimen/dp_3"
                         android:text="+1"
                         android:inputType="phone|textNoSuggestions"
-                        android:background="@android:color/transparent"/>
+                        android:background="@android:color/transparent"/>-->
 
                    <EditText
                        android:layout_width="match_parent"
