--- a/app/src/main/res/layout/fragment_update_account.xml
+++ b/app/src/main/res/layout/fragment_update_account.xml
@@ -58,7 +58,14 @@
                 android:padding="@dimen/dp_2"
                 android:src="@drawable/ic_phone"/>
 
-            <EditText
+
+            <include
+                android:id="@+id/viewCountryCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                layout="@layout/layout_country_codes"/>
+           <!-- <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/fuEdtCC"
@@ -77,7 +84,7 @@
                 android:paddingTop="@dimen/dp_3"
                 android:text="+1"
                 android:inputType="phone|textNoSuggestions"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/transparent"/>-->
 
             <EditText
                 android:layout_width="match_parent"
@@ -93,7 +100,7 @@
                 android:paddingRight="@dimen/dp_2"
 
                 android:paddingBottom="@dimen/dp_3"
-                android:paddingLeft="@dimen/dp_6"
+                android:paddingLeft="@dimen/dp_2"
                 android:paddingTop="@dimen/dp_3"
                 android:inputType="phone|textNoSuggestions"
                 android:hint="@string/str_phone"
