--- a/app/src/main/res/layout/fragment_login_driver.xml
+++ b/app/src/main/res/layout/fragment_login_driver.xml
@@ -7,6 +7,7 @@
 
 
     <ImageView
+        android:id="@+id/imgRushLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_60"
@@ -21,9 +22,10 @@
         android:imeOptions="actionDone"
         android:drawableLeft="@drawable/user_icon"
         android:hint="@string/hint_user"
+        android:layout_marginTop="@dimen/dp_50"
         android:inputType="textEmailAddress|textNoSuggestions"
         android:layout_marginRight="@dimen/dp_40"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/imgRushLogo"
         style="@style/AppTheme.Input.Login"/>
 
     <EditText
