--- a/app/src/main/res/menu/menu_driver_navigation.xml
+++ b/app/src/main/res/menu/menu_driver_navigation.xml
@@ -2,7 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-
+    <item
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_order_24dp"
+        android:title="Home" />
 
     <item
         android:id="@+id/nav_logout"
