--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="civ_border">#6c2420</color>
     <color name="color_accept_reject">#e8503e</color>
     <color name="color_custom_toast">#B63f33</color>
+    <color name="color_notify">#f08f82</color>
+    <color name="color_notify_border">#98979c</color>
 
 </resources>
