--- a/app/src/main/res/layout/nav_header_book_service.xml
+++ b/app/src/main/res/layout/nav_header_book_service.xml
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:id="@+id/headerEditTxt"
             android:layout_height="wrap_content"
-            android:text="Edit Profile"
+            android:text="@string/str_edit_profile"
             android:layout_gravity="center_vertical"
             android:textColor="@android:color/white"
             android:textStyle="normal"
