--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -26,12 +26,12 @@
 
      <ImageView
          android:id="@+id/imgLogo"
-         android:layout_width="35dp"
-         android:layout_height="30dp"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/dp_5"
          android:visibility="visible"
          android:layout_gravity="right|center_vertical"
-         android:background="@drawable/logo_signup"/>
+         android:background="@drawable/toolbar_logo"/>
 
 
 </android.support.v7.widget.Toolbar>
