--- a/app/src/main/res/menu/activity_book_service_drawer.xml
+++ b/app/src/main/res/menu/activity_book_service_drawer.xml
@@ -37,6 +37,12 @@
                 android:title="@string/str_menu_fav" />
 
 
+    <item
+        android:id="@+id/nav_settings"
+        android:icon="@android:drawable/ic_menu_set_as"
+        android:title="@string/str_settings" />
+
+
 
            <item
         android:id="@+id/nav_logout"
@@ -64,6 +70,8 @@
         android:enabled="false"
         android:orderInCategory="200"
         android:title="" />
+
+
         </menu>
 
 
