--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorPrimaryDark</item>
@@ -66,5 +67,15 @@
         <!-- active thumb & track color (30% transparency) -->
         <item name="colorControlActivated">#e6e600</item>
         <item name="colorSwitchThumbNormal">#cc0000</item>
+    </style>
+
+
+    <!-- Application theme. -->
+    <style name="SplashTheme" parent="AppTheme">
+        <!-- Disable window features like ActionBar, Title and Overlay. -->
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@drawable/splash_bg</item>
     </style>
 </resources>
