--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -109,10 +109,48 @@
             android:layout_weight=".6"
             android:layout_marginLeft="@dimen/dp_4"
             android:layout_height="wrap_content"
-            android:text="Pick Address"/>
+            />
 
 
     </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:layout_marginTop="@dimen/dp_3"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_5">
+
+            <TextView
+                android:layout_width="0sp"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/sp_16"
+                android:layout_marginTop="@dimen/dp_20"
+                android:textStyle="bold|italic"
+                android:layout_height="wrap_content"
+                android:layout_weight=".4"
+                android:text="Drop Address"/>
+
+
+
+            <TextView
+                android:id="@+id/reTxtDropAddress"
+                android:layout_width="0dp"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/sp_16"
+                android:layout_marginTop="@dimen/dp_20"
+                android:textStyle="bold|italic"
+                android:layout_weight=".6"
+                android:layout_marginLeft="@dimen/dp_4"
+                android:layout_height="wrap_content"
+                />
+
+
+        </LinearLayout>
 
 
 
