--- a/app/src/main/res/menu/activity_book_service_drawer.xml
+++ b/app/src/main/res/menu/activity_book_service_drawer.xml
@@ -37,10 +37,10 @@
                 android:title="@string/str_menu_fav" />
 
 
-    <item
+   <!-- <item
         android:id="@+id/nav_settings"
         android:icon="@android:drawable/ic_menu_set_as"
-        android:title="@string/str_settings" />
+        android:title="@string/str_settings" />-->
 
 
 
