--- a/app/src/main/res/drawable/bg_accept_order.xml
+++ b/app/src/main/res/drawable/bg_accept_order.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@android:color/white"></solid>
-    <corners android:radius="32dp" />
+    <corners android:radius="@dimen/dp_25" />
     <stroke android:width="2dp"
         android:color="@android:color/white"/>
 </shape>
