--- a/app/src/main/res/menu/menu_driver_navigation.xml
+++ b/app/src/main/res/menu/menu_driver_navigation.xml
@@ -13,6 +13,11 @@
         android:title="Upcoming" />
 
     <item
+        android:id="@+id/nav_record"
+        android:icon="@drawable/ic_record"
+        android:title="@string/str_menu_record" />
+
+    <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/ic_logout"
         android:title="@string/str_menu_logout" />
