--- a/app/src/main/res/layout/activity_upcoming.xml
+++ b/app/src/main/res/layout/activity_upcoming.xml
@@ -7,7 +7,10 @@
 
 
 
-    <include layout="@layout/content_upcoming" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/contentUpcoming"/>
 
 
 
